# class-trader

./: .env.example  .gitignore  CLAUDE.md  README.md  STATUS.md  docker-compose.homelab.yml  docker-compose.yml  homelab.env.template
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  runtime_config.py
backend/app/agents/: __init__.py  agent_config_seeder.py  base.py  bear_agent.py  bull_agent.py  degen.py  discovery_pipeline.py  discovery_pm.py  explorer.py  formatters.py  pipeline.py  portfolio_manager.py  regime_analyst.py  researcher.py  ticker_extractor.py
backend/app/agents/prompts/: bear_agent.md  bull_agent.md  degen.md  discovery_pm.md  portfolio_manager.md  regime_analyst.md  researcher.md
backend/app/data/: aggregator.py  alpaca_client.py  alphavantage_client.py  cache.py  finnhub_client.py  fmp_client.py  news_scanner.py  tendiebot.py
backend/app/execution/: approval_queue.py  engine.py  risk_manager.py  wash_sale_tracker.py
backend/app/models/: __init__.py  agent_config.py  discovery.py  market_data.py  pipeline.py  risk.py  trading.py  watchlist.py
backend/app/notifications/: notifier.py
backend/app/routers/: agents.py  analytics.py  approvals.py  dashboard.py  discovery.py  news.py  portfolio.py  settings.py  watchlist.py  ws.py
backend/app/scheduling/: scheduler.py
backend/app/schemas/: agents.py  api.py  discovery.py  market.py  trading.py
backend/tests/: conftest.py
backend/tests/test_execution/: test_approval_queue.py  test_engine.py
backend/tests/test_risk/: test_risk_manager.py  test_wash_sale_tracker.py
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/agents/: AgentCard.tsx  ReasoningExpander.tsx
frontend/src/components/approvals/: ApprovalCard.tsx
frontend/src/components/dashboard/: AutoApproveToggle.tsx  NextRunCountdown.tsx  PositionsTable.tsx  RecentActivity.tsx  RegimeBadge.tsx
frontend/src/components/discovery/: DiscoveryAgentCard.tsx  DiscoveryAgentTimeline.tsx  DiscoveryChat.tsx  QueryInput.tsx  RecommendationCard.tsx  RecommendationsList.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/shared/: ConfidenceBadge.tsx  LoadingState.tsx  SparkLine.tsx  (+1 more)
frontend/src/hooks/: useApprovals.ts  useDiscoveryStream.ts  usePortfolio.ts  useWebSocket.ts
frontend/src/lib/: constants.ts  types.ts  utils.ts
frontend/src/pages/: AgentActivity.tsx  Analytics.tsx  Approvals.tsx  Dashboard.tsx  Discovery.tsx  NewsSentiment.tsx  Portfolio.tsx  Settings.tsx
scripts/: init_watchlist.py  test_connections.py
